--- a/A09-Spatial-Autocorrelation.Rmd
+++ b/A09-Spatial-Autocorrelation.Rmd
@@ -13,7 +13,7 @@ Data used in the following exercises can be loaded into your current R session b
 
 ```{r}
 z <- gzcon(url("https://github.com/mgimond/Spatial/raw/main/Data/s_sf.RDS"))
-s.sf <- readRDS(z)
+s1 <- readRDS(z)
 ```
 
 The data object consists of an `sf` vector layer representing income and education data aggregated at the county level for the state of Maine.
