--- a/index.Rmd
+++ b/index.Rmd
@@ -16,6 +16,10 @@ always_allow_html: yes
 # Preface {-}
 
 ::: {style="color: darkred; background: #EEEEEE; border: 1 px solid grey;border-radius: 10px; padding: 0.5em"}
+<u>2023 UPDATE:</u>
+<ul><li> Removed dependence on `rgdal` and `maptools` in Appendices</li>
+<li> Added Statistical Maps chapter (wrapped confidence maps into this chapter)</li></ul>
+
 <u>2021 UPDATE:</u>
  
 This book has been updated for the 2021-2022 academic year. Most changes are in the Appendix and pertain to the `sf` ecosystem. This includes changes in the mapping appendix, and coordinate systems appendix. This also includes a new appendix that describes the simple feature anatomy and step-by-step instructions on creating new geometries from scratch.
